testsuite/bad/bad063.jl
int main() {
  1; // this should be a void expression
  return 1;
}
